# Task-1

./: LICENSE  README.md  pyproject.toml
src/: main.py  newsscraper.py
