[tool.poetry]
name = "newscatcher-py-package-demo"
version = "0.1.0"
description = ""
authors = ["mekdes <mekdi2550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
newscatcher = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
